Potentially fix iOS notch display

--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-gradient-to-br from-slate-900 to-amber-950">
+<html lang="en" class="bg-slate-900 bg-gradient-to-br from-slate-900 to-amber-950">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" class="h-screen">
